Changed artifactName and fixed platform suffix handling
We now use the artifactName `scala-steward-mill-plugin` which was already used for previous versions.

--- a/README.adoc
+++ b/README.adoc
@@ -5,7 +5,7 @@
 
 Mill plugin to export dependency information to be processed by Scala-Steward.
 
-See https://github.com/scala-steward-org/scala-steward/issues/2704, for details.
+See https://github.com/scala-steward-org/scala-steward/issues/2704 and https://github.com/scala-steward-org/scala-steward/issues/2818 for details.
 
 == Usage
 
